--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       Ivan Donat Pupovac
     </h2>
     <p>
-      Hello, I'm Ivan. I study Computer Science and Mathematics at the University of Manchester.
+      Hello, I'm Ivan.
     </p>
 
     <h3>
